--- a/.github/workflows/e2e_playground.yml
+++ b/.github/workflows/e2e_playground.yml
@@ -12,68 +12,18 @@ on:
         description: 'PHP Version'
         required: true
 
-env:
-  STORE_API_KEY: SWSCOVFSNKLBYUTKS1VSOEDTUQ
-
 jobs:
 
   build:
-    name: Build Plugin
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Create Cache Directories
-        run: |
-          mkdir -p ~/.build
-
-      - name: Mount Build Cache
-        id: cache-build
-        uses: actions/cache@v3
-        with:
-          key: cache-plugin
-          path: ~/.build
-
-      - name: Download Docker
-        run: |
-          docker pull dockware/dev:${{ github.event.inputs.swVersion }}
-
-      - name: Start Docker
-        run: |
-          docker run --rm --name shop -d dockware/dev:${{ github.event.inputs.swVersion }}
-          sleep 20
-          docker logs shop
-
-      - name: Upload into Docker
-        run: |
-          docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
-          docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
-
-      - name: Update Shopware Config
-        run: |
-          docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
-
-      - name: Build Plugin
-        run: |
-          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make release'
-
-      - name: Download ZIP File
-        run: |
-          docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
+    uses: ./.github/workflows/_pipeline_build.yml
+    with:
+      shopware: ${{ github.event.inputs.swVersion }}
 
   e2e:
-    uses: ./.github/workflows/pipeline_cypress.yml
+    uses: ./.github/workflows/_pipeline_cypress.yml
     needs: [ build ]
     with:
       shopware: ${{ github.event.inputs.swVersion }}
       php: ${{ github.event.inputs.phpVersion }}
-      storeApiKey: $STORE_API_KEY
       filter: ""
 
