--- a/.github/workflows/_pipeline_cypress.yml
+++ b/.github/workflows/_pipeline_cypress.yml
@@ -9,64 +9,51 @@ on:
       php:
         required: true
         type: string
-      filter:
+      filters:
         required: true
         type: string
+      testrail:
+        required: true
+        type: boolean
+
 
 env:
-  STORE_API_KEY: SWSCOVFSNKLBYUTKS1VSOEDTUQ
+  SHOP_URL: https://local.mollie.shop
+
 
 jobs:
 
   e2e:
-    name: E2E Tests | Shopware ${{ inputs.shopware }}, PHP ${{ inputs.php }}
     runs-on: ubuntu-latest
     steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Mount Build Cache
-        id: cache-build
-        uses: actions/cache@v3
-        with:
-          key: cache-plugin
-          path: ~/.build
-
-      - name: Download Docker
-        run: |
-          docker pull dockware/play:${{ inputs.shopware }}
-
-      - name: Start Docker
-        run: |
-          docker run --rm -p 443:443 --name shop --env PHP_VERSION=${{ inputs.php }} --env SW_API_ACCESS_KEY=$STORE_API_KEY -d dockware/play:${{ inputs.shopware }}
-          sleep 20
-          docker logs shop
-          # now change the domain of our shop, mollie doesn't work with localhost
-          sudo echo "127.0.0.1 local.mollie.shop" | sudo tee -a /etc/hosts
-          docker exec shop bash -c "mysql -u root -proot shopware -e \"UPDATE sales_channel_domain SET url='https://local.mollie.shop' WHERE url NOT LIKE 'default.%';\""
-
-      - name: Update Shopware Config
-        run: |
-          docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
-
-      - name: Upload ZIP File to Docker
-        run: |
-          docker cp ~/.build/MolliePayments.zip shop:/var/www/html/custom/plugins/MolliePayments.zip
-          docker exec shop bash -c 'cd /var/www/html/custom/plugins && unzip -o MolliePayments.zip'
-
-      - name: Install/Configure Plugin
-        run: |
-          docker exec shop bash -c 'php bin/console plugin:refresh'
-          docker exec shop bash -c 'php bin/console plugin:install MolliePayments --activate'
-          docker exec shop bash -c 'php bin/console system:config:set MolliePayments.config.testMode true'
-          docker exec shop bash -c 'php bin/console cache:clear'
 
       - name: Install Cypress
         run: cd tests/Cypress && make install -B
 
-      - name: Start Cypress Core Tests
-        run: cd tests/Cypress && make run shopware=${{ inputs.shopware }} url=https://local.mollie.shop storeApiKey=$STORE_API_KEY filters='${{ inputs.filter }}'
+      - name: Start Cypress | Filters ${{ inputs.filters }}
+        if: "${{ github.event.inputs.filters != '' }}"
+        run: |
+          cd tests/Cypress && \
+          make run shopware=${{ inputs.shopware }} storeApiKey=${{ inputs.storeApiKey }} url=$SHOP_URL filters=${{ inputs.filters }}
+
+      - name: Start Cypress
+        if: "${{ github.event.inputs.testrail == false }}"
+        run: |
+          cd tests/Cypress && \
+          make run shopware=${{ inputs.shopware }} storeApiKey=${{ inputs.storeApiKey }} url=$SHOP_URL
+
+      - name: Start Cypress with TestRail
+        if: "${{ github.event.inputs.testrail == true }}"
+        run: |
+          cd tests/Cypress && \
+          CYPRESS_TESTRAIL_DOMAIN=${{ secrets.TESTRAIL_DOMAIN }} \
+          CYPRESS_TESTRAIL_USERNAME=${{ secrets.TESTRAIL_USERNAME }} \
+          CYPRESS_TESTRAIL_PASSWORD=${{ secrets.TESTRAIL_PASSWORD }} \
+          CYPRESS_TESTRAIL_PROJECT_ID=7 \
+          CYPRESS_TESTRAIL_MILESTONE_ID=15 \
+          CYPRESS_TESTRAIL_RUN_NAME="Github Workflow __datetime__, ${{ github.event.head_commit.message }}, Shopware ${{ matrix.shopware }}" \
+          CYPRESS_TESTRAIL_RUN_CLOSE=true \
+          make run shopware=${{ matrix.shopware }} storeApiKey=$STORE_API_KEY url=$SHOP_URL 
 
       - name: Download Logs
         if: ${{ always() }}
