--- a/.github/workflows/_pipeline_docker.yml
+++ b/.github/workflows/_pipeline_docker.yml
@@ -23,6 +23,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Clone Code
+        uses: actions/checkout@v2
+
       - name: Download Docker
         run: |
           docker pull dockware/play:${{ inputs.shopware }}
