--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -1,33 +1,12 @@
 name: PR Pipeline
 
-on: [pull_request, workflow_dispatch]
+on: [ pull_request, workflow_dispatch ]
 
 
 jobs:
 
   install:
-    name: Install Dev Dependencies
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Install Dependencies
-        run: make dev -B
+    uses: ./.github/workflows/pipeline_install_dev.yml
 
   # ------------------------------------------------------------------------------------------------------------------------
 
@@ -60,51 +39,24 @@ jobs:
         shopware: [ '6.4.16.0', '6.4.15.0', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.0', '6.2.0', '6.1.0' ]
     steps:
 
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Mount Build Cache
-        id: cache-build
-        uses: actions/cache@v3
-        with:
-          key: cache-plugin
-          path: ~/.build
-
-      - uses: ./.github/workflows/pipeline_docker.yml
+      - name: Installation Tests
+        uses: ./.github/workflows/_pipeline_cypress.yml
         with:
           shopware: ${{ matrix.shopware }}
-          php: '8.1'
-          storeApiKey: ''
-          zipFile: '~/.build/MolliePayments.zip'
+          php: 8.1
+          # only do installation tests, no cypress for this simple testing
+          runCypress: false
 
   # ------------------------------------------------------------------------------------------------------------------------
 
   e2e:
     name: E2E Core Tests
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Mount Build Cache
-        id: cache-build
-        uses: actions/cache@v3
-        with:
-          key: cache-plugin
-          path: ~/.build
-
-      - uses: ./.github/workflows/_pipeline_docker.yml
-        with:
-          shopware: '6.4.16.0'
-          php: '8.1'
-          storeApiKey: 'SWSCOVFSNKLBYUTKS1VSOEDTUQ'
-          zipFile: '~/.build/MolliePayments.zip'
-
-      - uses: ./.github/workflows/_pipeline_cypress.yml
-        with:
-          shopware: '6.4.16.0'
-          php: '8.1'
-          storeApiKey: 'SWSCOVFSNKLBYUTKS1VSOEDTUQ'
-          filters: "@core"
-          testrail: false
+    needs: build
+    uses: ./.github/workflows/_pipeline_cypress.yml
+    with:
+      shopware: 6.4.16.0
+      php: 8.1
+      # only run @core tests, because we have no API key here
+      filters: "@core"
+      # do not send to testrail for PR tests
+      testrail: false
