NTR: improve actions

--- a/.github/workflows/action_build.yml
+++ b/.github/workflows/action_build.yml
@@ -1,51 +1,45 @@
-name: _ Build Plugin
+name: 'Build Plugin'
 
-on:
-  workflow_call:
-    inputs:
-      shopware:
-        description: "The Shopware version that is used to build the plugin"
-        type: string
-        required: true
+inputs:
+  shopware:
+    description: "The Shopware version that is used to build the plugin"
+    type: string
+    required: true
 
+runs:
+  using: "composite"
+  steps:
 
-jobs:
+    - name: Start Docker
+      run: |
+        docker run --rm --name shop -d dockware/dev:${{ inputs.shopware }}
+        sleep 20
+        docker logs shop
 
-  build:
-    name: Build Plugin
-    runs-on: ubuntu-latest
-    steps:
+    - name: Update Shopware Config
+      run: |
+        docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
 
-      - name: Start Docker
-        run: |
-          docker run --rm --name shop -d dockware/dev:${{ inputs.shopware }}
-          sleep 20
-          docker logs shop
+    - name: Upload into Docker
+      run: |
+        docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
+        docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
 
-      - name: Update Shopware Config
-        run: |
-          docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
+    # --------------------------------------------------------------------------------------------------------------------------------------
 
-      - name: Upload into Docker
-        run: |
-          docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
-          docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
+    - name: Build Plugin
+      run: |
+        docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make release'
 
-      # --------------------------------------------------------------------------------------------------------------------------------------
+    # --------------------------------------------------------------------------------------------------------------------------------------
 
-      - name: Build Plugin
-        run: |
-          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make release'
+    - name: Download ZIP File
+      run: |
+        docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
 
-      # --------------------------------------------------------------------------------------------------------------------------------------
-
-      - name: Download ZIP File
-        run: |
-          docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
-
-      - name: Store ZIP file in Github
-        uses: actions/upload-artifact@v2
-        with:
-          name: MolliePayments-Shopware-${{ inputs.shopware }}
-          retention-days: 4
-          path: ~/.build
+    - name: Store ZIP file in Github
+      uses: actions/upload-artifact@v2
+      with:
+        name: MolliePayments-Shopware-${{ inputs.shopware }}
+        retention-days: 4
+        path: ~/.build
