NTR: another actions try

--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -1,9 +1,9 @@
 name: 'Build Plugin'
+description: "Builds the Plugin"
 
 inputs:
   shopware:
     description: "The Shopware version that is used to build the plugin"
-    type: string
     required: true
 
 runs:
