NTR: add missing shell in github action

--- a/.github/actions/build-plugin/action.yml
+++ b/.github/actions/build-plugin/action.yml
@@ -11,16 +11,19 @@ runs:
   steps:
 
     - name: Start Docker
+      shell: bash
       run: |
         docker run --rm --name shop -d dockware/dev:${{ inputs.shopware }}
         sleep 20
         docker logs shop
 
     - name: Update Shopware Config
+      shell: bash
       run: |
         docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
 
     - name: Upload into Docker
+      shell: bash
       run: |
         docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
         docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
@@ -28,12 +31,14 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Build Plugin
+      shell: bash
       run: |
         docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make release'
 
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Download ZIP File
+      shell: bash
       run: |
         docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
 
